# SSA-IR

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: IR.h  dominators.h
lib/: BB.cpp  Graph.cpp
tests/: CMakeLists.txt  tests.cpp
